--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export(create_data)
 export(fit)
 export(plot_diagnostics)
 import(ggplot2)
+importFrom(dplyr,left_join)
 importFrom(stats,runif)
 useDynLib(salmix, .registration = TRUE)
