--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,14 @@
 language: r
+# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
+
+language: R
 sudo: false
 cache: packages
-r: devel
-
-r_build_args: '--no-build-vignettes'
-r_check_args: '--ignore-vignettes --no-examples'
+warnings_are_errors: true
+r_check_args: "--as-cran --no-build-vignettes --no-manual"
+r_build_args: "--no-manual"
 
 before_install:
   - mkdir -p ~/.R
-- echo "CXX14FLAGS=-O3 -mtune=native -march=native -Wno-unused-variable -Wno-unused-function  -Wno-macro-redefined" >> ~/.R/Makevars
-- echo "CXX14=g++ -std=c++1y -fPIC" >> ~/.R/Makevars
-
-notifications:
-  email:
-  on_success: change
-on_failure: change
-
-warnings_are_errors: false
+  - echo "CXX14FLAGS=-O3 -mtune=native -march=native -Wno-unused-variable -Wno-unused-function  -Wno-macro-redefined" >> ~/.R/Makevars
+  - echo "CXX14=g++ -std=c++1y -fPIC" >> ~/.R/Makevars
