--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,5 +10,6 @@ import(ggplot2)
 importFrom(dplyr,left_join)
 importFrom(stats,logLik)
 importFrom(stats,nobs)
+importFrom(stats,rnorm)
 importFrom(stats,runif)
 useDynLib(salmix, .registration = TRUE)
