--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(plot_diagnostics)
 import(ggplot2)
 importFrom(dplyr,left_join)
 importFrom(stats,logLik)
+importFrom(stats,model.matrix)
 importFrom(stats,nobs)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
