--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(logLik,phenomix)
 S3method(nobs,phenomix)
 export(create_data)
 export(fit)
+export(fitted.phenomix)
 export(plot_diagnostics)
 import(ggplot2)
 importFrom(dplyr,left_join)
