--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
     gnorm,
     methods,
     stats,
-    TMB (>= 1.7.20)
+    TMB (>= 1.7.20),
+    nlme
 Suggests:
     testthat,
     knitr,
