update changes per review

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,14 +9,13 @@ S3method(predict,phenomix)
 S3method(ranef,phenomix)
 export(create_data)
 export(fit)
-export(fixef)
 export(pars)
 export(plot_diagnostics)
-export(ranef)
 import(ggplot2)
 importFrom(TMB,MakeADFun)
 importFrom(TMB,sdreport)
 importFrom(dplyr,left_join)
+importFrom(methods,is)
 importFrom(nlme,fixef)
 importFrom(nlme,ranef)
 importFrom(stats,logLik)
