--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,9 @@
-pandoc: 2.11.4
-pkgdown: 2.0.2
+pandoc: '2.18'
+pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
   a1_examples: a1_examples.html
   a2_covariates: a2_covariates.html
   a3_troubleshooting: a3_troubleshooting.html
-last_built: 2022-10-03T13:11Z
+last_built: 2023-01-05T23:19Z
 
