Updated extract functions for Maria

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,12 @@ S3method(nobs,phenomix)
 S3method(predict,phenomix)
 S3method(ranef,phenomix)
 export(create_data)
+export(extract_all)
+export(extract_lower)
+export(extract_means)
+export(extract_sigma)
+export(extract_theta)
+export(extract_upper)
 export(fit)
 export(pars)
 export(plot_diagnostics)
