--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,10 @@
-pandoc: '2.18'
-pkgdown: 2.0.6
+pandoc: 2.19.2
+pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
   a1_examples: a1_examples.html
   a2_covariates: a2_covariates.html
   a3_troubleshooting: a3_troubleshooting.html
-last_built: 2023-01-05T23:19Z
+  a4_derived: a4_derived.html
+last_built: 2023-05-03T11:56Z
 
