add annual totals
- add annual totals to cpp
- add helper function for extracting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(predict,phenomix)
 S3method(ranef,phenomix)
 export(create_data)
 export(extract_all)
+export(extract_annual)
 export(extract_lower)
 export(extract_means)
 export(extract_sigma)
