--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Description: The 'salmix' package fits time-varying density curves to run
     adult Pacific salmon, though could also be applied to other kinds
     of data such as hydrographs, plant phenology (flowering, leaf out).
 License: GPL (>=3)
-URL: https://ericward-noaa.github.io/phenomix, https://github.com/ericward-noaa/phenomix
+URL: https://noaa-nwfsc.github.io/phenomix, https://github.com/noaa-nwfsc/phenomix
 Depends: 
     R (>= 4.0.0)
 Imports:
@@ -42,5 +42,5 @@ ByteCompile: true
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 SystemRequirements: GNU make
