--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,8 +19,12 @@ export(fit)
 export(pars)
 export(plot_diagnostics)
 import(ggplot2)
-importFrom(TMB,MakeADFun)
-importFrom(TMB,sdreport)
+importFrom(RTMB,ADREPORT)
+importFrom(RTMB,MakeADFun)
+importFrom(RTMB,OBS)
+importFrom(RTMB,REPORT)
+importFrom(RTMB,getAll)
+importFrom(RTMB,sdreport)
 importFrom(dplyr,left_join)
 importFrom(methods,is)
 importFrom(nlme,fixef)
@@ -31,4 +35,3 @@ importFrom(stats,nobs)
 importFrom(stats,predict)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
-useDynLib(phenomix, .registration = TRUE)
